# MBA.TCC

./: .gitignore  pyproject.toml
data/: ILHA_SOLTEIRA.csv
src/: EDA.ipynb  EDA.py
