[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]
